--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="fr">
-<head>
+<head> <header>
+    <img src="logo.svg" alt="Logo" class="logo">
+</header>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>OtakuHub — Figurines, mangas & goodies</title>
@@ -77,3 +80,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
