--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <img src="logo.png" alt="Logo" class="logo" onerror="this.style.display='none'">
+      <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>OtakuHub</h1>
     </div>
     <nav>
@@ -77,3 +77,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
