--- a/product.html
+++ b/product.html
@@ -33,3 +33,11 @@
   <script src="script.js"></script>
 </body>
 </html>
+<div class="product-card">
+  <img src="IMAGE" alt="TITLE" />
+  <h3>TITLE</h3>
+  <p class="description">SHORT</p>
+  <span class="price">PRICE</span>
+  <a href="AFFILIATE">Acheter</a>
+</div>
+
