--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body><div class="banner-otaku">
+    <img src="banner.png" alt="Bannière OtakuHub">
+  </div>
+ 
   <header class="site-header">
     <div class="brand">
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
@@ -78,6 +81,7 @@
   <script src="products.js"></script>
 </body>
 </html>
+
 
 
 
