--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body><div class="banner-otaku">
+<body><div class="banner-otaku">…</div>
     <img src="banner.png" alt="Bannière OtakuHub">
   </div>
  
-  <header class="site-header">
+  <header class="site-header banner-bg">
     <div class="brand">
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>Bienvenue sur OtakuHub</h1> 
@@ -81,6 +81,7 @@
   <script src="products.js"></script>
 </body>
 </html>
+
 
 
 
