--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>Bienvenue sur OtakuHub</h1> 
     </div>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="#figures">Figurines</a>
-      <a href="#goodies">Goodies</a>
-      <a href="article.html">Blog</a>
-    </nav>
+    <nav class="navbar">
+    <a href="index.html">Accueil</a>
+    <a href="figurines.html">Figurines</a>
+    <a href="goodies.html">Goodies</a>
+    <a href="blog.html">Blog</a>
+</nav>
     <div class="search-wrap">
       <input id="searchInput" placeholder="Rechercher figurine, manga..." />
       <button id="searchBtn">🔎</button>
@@ -80,6 +80,7 @@
   <script src="products.js"></script>
 </body>
 </html>
+
 
 
 
