--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>Bienvenue sur OtakuHub</h1> 
     </div>
-    <nav class="navbar">
-    <a href="index.html">Accueil</a>
-    <a href="figurines.html">Figurines</a>
-    <a href="goodies.html">Goodies</a>
-    <a href="blog.html">Blog</a>
+    <nav class="navbar-otaku">
+    <a class="nav-link" href="index.html">Accueil</a>
+    <a class="nav-link" href="figurines.html">Figurines</a>
+    <a class="nav-link" href="goodies.html">Goodies</a>
+    <a class="nav-link" href="blog.html">Blog</a>
 </nav>
     <div class="search-wrap">
       <input id="searchInput" placeholder="Rechercher figurine, manga..." />
@@ -80,6 +80,7 @@
   <script src="products.js"></script>
 </body>
 </html>
+
 
 
 
