--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header banner-bg">
     <div class="brand">
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
-      <h1>Bienvenue sur OtakuHub</h1> 
+      <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
     <nav class="navbar-otaku">
     <a class="nav-link" href="index.html">Accueil</a>
@@ -96,6 +96,7 @@ document.querySelectorAll('.nav-link').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
