--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="nav-link" href="index.html">Accueil</a>
     <a class="nav-link" href="figurines.html">Figurines</a>
     <a class="nav-link" href="goodies.html">Goodies</a>
-    <a class="nav-link" href="blog.html">Blog</a>
+    <a class="nav-link" href="manga.html">Manga</a>
 </nav>
     <div class="search-wrap">
       <input id="searchInput" placeholder="Rechercher figurine, manga..." />
@@ -95,6 +95,7 @@ document.querySelectorAll('.nav-link').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
