--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
-    <nav class="navbar-otaku">
-    <a class="nav-link" href="index.html">Accueil</a>
-    <a class="nav-link" href="figurines.html">Figurines</a>
-    <a class="nav-link" href="goodies.html">Goodies</a>
-    <a class="nav-link" href="manga.html">Manga</a>
+    <nav class="navbar-otaku nav-manga">
+    <a href="/accueil">Accueil</a>
+    <a href="/figurines">Figurines</a>
+    <a href="/goodies">Goodies</a>
+    <a href="/manga">Manga</a>
+
+    <input type="search" placeholder="Rechercher...">
 </nav>
+
     <div class="search-wrap">
       <input id="searchInput" placeholder="Rechercher figurine, manga..." />
       <button id="searchBtn">🔎</button>
@@ -95,6 +98,7 @@ document.querySelectorAll('.nav-link').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
