--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
       <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
-    <nav class="navbar-otaku nav-manga">
+    <nav class="nav-manga">
     <a href="/accueil">Accueil</a>
     <a href="/figurines">Figurines</a>
     <a href="/goodies">Goodies</a>
     <a href="/manga">Manga</a>
 </nav>
-    <div class="search-wrap">
+<div class="search-wrap">
       <input id="searchInput" placeholder="Rechercher figurine, manga..." />
       <button id="searchBtn">🔎</button>
     </div>
@@ -93,8 +93,17 @@ document.querySelectorAll('.nav-link').forEach(link => {
     });
 });
 </script>
+<script>
+document.querySelectorAll('.nav-manga a').forEach(link => {
+    link.addEventListener('mouseenter', () => {
+        link.style.transform = 'scale(1.07)';
+        setTimeout(() => link.style.transform = 'scale(1)', 120);
+    });
+});
+</script>
 </body>
 </html>
+
 
 
 
