--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="/manga">Manga</a>
 </nav>
 <div class="search-wrap">
-      <input id="searchInput" placeholder="Rechercher figurine, manga..." />
+      <input type="search" class="search-bar" placeholder="Rechercher figurine, manga...">
       <button id="searchBtn">🔎</button>
     </div>
   </header>
@@ -103,6 +103,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
