--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </div>
  
   <header class="site-header banner-bg">
-    <div class="brand">
-      <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
+   <div class="logo">
+    <svg class="logo-svg" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
+      <path class="logo-path" d="M10,50 L50,10 L90,50 Z" fill="none" stroke="#000" stroke-width="3"/>
+    </svg>
+</div>
+
       <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
     <nav class="nav-manga">
@@ -52,7 +56,7 @@
       <div id="goodiesGrid" class="grid"></div>
     </section>
 
-    <section class="blog-preview">
+    <section class="manga-preview">
       <h3>Derniers articles</h3>
       <div id="articlesGrid" class="grid-articles"></div>
       <a class="btn" href="article.html">Voir tous les articles</a>
@@ -103,6 +107,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
