--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
  
   <header class="site-header banner-bg">
    <div class="logo">
-    <svg class="logo-svg" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
+    <svg class="logo.svg" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
       <path class="logo-path" d="M10,50 L50,10 L90,50 Z" fill="none" stroke="#000" stroke-width="3"/>
     </svg>
 </div>
-
-      <h1>Trouvez vos produits préférés 🇯🇵</h1> 
+   <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
     <nav class="nav-manga">
     <a href="/accueil">Accueil</a>
@@ -107,6 +106,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
