--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
  
   <header class="site-header banner-bg">
    <div class="logo">
-    <svg class="logo.svg" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-      <path class="logo-path" d="M10,50 L50,10 L90,50 Z" fill="none" stroke="#000" stroke-width="3"/>
-    </svg>
+   <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
 </div>
    <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
@@ -106,6 +104,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
