--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
   <body><div class="banner-otaku">…</div>
 </div>
- 
-  <header class="site-header banner-bg">
-   <div class="logo">
-   <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
+   <header class="site-header banner-bg">
+    <div class="brand">
+      <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
 </div>
    <h1>Trouvez vos produits préférés 🇯🇵</h1> 
     </div>
@@ -104,6 +103,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
