--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 </head>
+  <style>
+        input[type="search"],
+        .search-input,
+        #search {
+            color: #222 !important;
+            -webkit-text-fill-color: #222 !important;
+        }
+
+        input[type="search"]::placeholder,
+        .search-input::placeholder,
+        #search::placeholder {
+            color: #7d7d7d !important;
+            opacity: 1 !important;
+        }
+    </style>
   <body><div class="banner-otaku">…</div>
 </div>
    <header class="site-header banner-bg">
@@ -103,6 +118,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
