--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             opacity: 1 !important;
         }
     </style>
-  <body><div class="banner-otaku">…</div>
-</div>
-   <header class="site-header banner-bg">
+  </head>
+  <body>
+    <div class="banner-otaku">…
+    </div>
+<header class="site-header banner-bg">
     <div class="brand">
       <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
 </div>
@@ -118,6 +120,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
