--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>OtakuHub — Figurines, mangas & goodies</title>
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
-</head>
+
   <style>
         input[type="search"],
         .search-input,
@@ -21,17 +21,21 @@
             color: #7d7d7d !important;
             opacity: 1 !important;
         }
-    </style>
-  </head>
-  <body>
+  </style>
+</head>
+
+<body>
     <div class="banner-otaku">…
     </div>
+
 <header class="site-header banner-bg">
     <div class="brand">
-      <img src="logo.svg" alt="Logo" class="logo"" onerror="this.style.display='none'">
-</div>
-   <h1>Trouvez vos produits préférés 🇯🇵</h1> 
+      <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
     </div>
+
+    <h1>Trouvez vos produits préférés 🇯🇵</h1>
+</header>
+
     <nav class="nav-manga">
     <a href="/accueil">Accueil</a>
     <a href="/figurines">Figurines</a>
@@ -120,6 +124,7 @@ document.querySelectorAll('.nav-manga a').forEach(link => {
 </script>
 </body>
 </html>
+
 
 
 
