--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 
+  <!-- Correction couleur barre de recherche -->
   <style>
         input[type="search"],
-        .search-input,
-        #search {
+        .search-bar {
             color: #222 !important;
             -webkit-text-fill-color: #222 !important;
         }
 
         input[type="search"]::placeholder,
-        .search-input::placeholder,
-        #search::placeholder {
+        .search-bar::placeholder {
             color: #7d7d7d !important;
             opacity: 1 !important;
         }
@@ -25,105 +24,124 @@
 </head>
 
 <body>
-    <div class="banner-otaku">…
-    </div>
 
-<header class="site-header banner-bg">
-    <div class="brand">
-      <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
-    </div>
+    <div class="banner-otaku">…</div>
 
-    <h1>Trouvez vos produits préférés 🇯🇵</h1>
-</header>
-
-    <nav class="nav-manga">
-    <a href="/accueil">Accueil</a>
-    <a href="/figurines">Figurines</a>
-    <a href="/goodies">Goodies</a>
-    <a href="/manga">Manga</a>
-</nav>
-<div class="search-wrap">
-      <input type="search" class="search-bar" placeholder="Rechercher...">
-      <button id="searchBtn">🔎</button>
-    </div>
-  </header>
-
-  <main>
-    <section class="hero">
-      <div class="hero-left">
-        <h2>Top figurines & bons plans anime</h2>
-        <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
-        <div class="cta-row">
-          <a class="btn primary" href="#figures">Voir les figurines</a>
-          <a class="btn" href="article.html">Guide collection</a>
+    <!-- HEADER PRINCIPAL -->
+    <header class="site-header banner-bg">
+        <div class="brand">
+            <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
         </div>
-      </div>
-      <div class="hero-right">
-        <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
-      </div>
-    </section>
 
-    <section id="figures" class="catalog-section">
-      <h3>Figurines populaires</h3>
-      <div id="productsGrid" class="grid"></div>
-    </section>
+        <h1>Trouvez vos produits préférés 🇯🇵</h1>
+    </header>
 
-    <section id="goodies" class="catalog-section">
-      <h3>Goodies & Posters</h3>
-      <div id="goodiesGrid" class="grid"></div>
-    </section>
+    <!-- NAVIGATION -->
+    <nav class="nav-manga">
+        <a href="/accueil">Accueil</a>
+        <a href="/figurines">Figurines</a>
+        <a href="/goodies">Goodies</a>
+        <a href="/manga">Manga</a>
+    </nav>
 
-    <section class="manga-preview">
-      <h3>Derniers articles</h3>
-      <div id="articlesGrid" class="grid-articles"></div>
-      <a class="btn" href="article.html">Voir tous les articles</a>
-    </section>
-  </main>
-
-  <!-- Modal produit -->
-  <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
-    <div class="modal-content">
-      <button id="closeModal" class="close">✕</button>
-      <div id="modalInner"></div>
+    <!-- BARRE DE RECHERCHE -->
+    <div class="search-wrap">
+        <input type="search" class="search-bar" placeholder="Rechercher...">
+        <button id="searchBtn">🔎</button>
     </div>
-  </div>
 
-  <footer>
-    <div class="footer-inner">
-      <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
-      <div class="footer-links">
-        <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
-      </div>
+    <main>
+
+        <!-- SECTION HERO -->
+        <section class="hero">
+            <div class="hero-left">
+                <h2>Top figurines & bons plans anime</h2>
+                <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
+
+                <div class="cta-row">
+                    <a class="btn primary" href="#figures">Voir les figurines</a>
+                    <a class="btn" href="article.html">Guide collection</a>
+                </div>
+            </div>
+
+            <div class="hero-right">
+                <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
+            </div>
+        </section>
+
+        <!-- FIGURINES -->
+        <section id="figures" class="catalog-section">
+            <h3>Figurines populaires</h3>
+            <div id="productsGrid" class="grid"></div>
+        </section>
+
+        <!-- GOODIES -->
+        <section id="goodies" class="catalog-section">
+            <h3>Goodies & Posters</h3>
+            <div id="goodiesGrid" class="grid"></div>
+        </section>
+
+        <!-- ARTICLES -->
+        <section class="manga-preview">
+            <h3>Derniers articles</h3>
+            <div id="articlesGrid" class="grid-articles"></div>
+            <a class="btn" href="article.html">Voir tous les articles</a>
+        </section>
+
+    </main>
+
+    <!-- MODAL PRODUIT -->
+    <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <button id="closeModal" class="close">✕</button>
+            <div id="modalInner"></div>
+        </div>
     </div>
-  </footer>
 
-  <script src="script.js"></script>
-  <script src="products.js"></script>
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-inner">
+            <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
+            <div class="footer-links">
+                <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- JS -->
+    <script src="script.js"></script>
+    <script src="products.js"></script>
+
+    <!-- Effet nav -->
     <script>
-document.querySelectorAll('.nav-link').forEach(link => {
-    link.addEventListener('click', e => {
-        const wave = document.createElement('span');
-        wave.classList.add('energy-wave');
+        document.querySelectorAll('.nav-link').forEach(link => {
+            link.addEventListener('click', e => {
+                const wave = document.createElement('span');
+                wave.classList.add('energy-wave');
 
-        const rect = link.getBoundingClientRect();
-        wave.style.left = (e.clientX - rect.left) + "px";
-        wave.style.top = (e.clientY - rect.top) + "px";
+                const rect = link.getBoundingClientRect();
+                wave.style.left = (e.clientX - rect.left) + "px";
+                wave.style.top = (e.clientY - rect.top) + "px";
 
-        link.appendChild(wave);
-        setTimeout(() => wave.remove(), 450);
-    });
-});
-</script>
-<script>
-document.querySelectorAll('.nav-manga a').forEach(link => {
-    link.addEventListener('mouseenter', () => {
-        link.style.transform = 'scale(1.07)';
-        setTimeout(() => link.style.transform = 'scale(1)', 120);
-    });
-});
-</script>
+                link.appendChild(wave);
+                setTimeout(() => wave.remove(), 450);
+            });
+        });
+    </script>
+
+    <!-- Petit zoom sur hover -->
+    <script>
+        document.querySelectorAll('.nav-manga a').forEach(link => {
+            link.addEventListener('mouseenter', () => {
+                link.style.transform = 'scale(1.07)';
+                setTimeout(() => link.style.transform = 'scale(1)', 120);
+            });
+        });
+    </script>
+
 </body>
 </html>
+
 
 
 
