--- a/index.html
+++ b/index.html
@@ -7,203 +7,158 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 
- <body>
+  <!-- Couleur du texte dans la barre de recherche -->
+  <style>
+    input[type="search"],
+    .search-bar {
+        color: #222 !important;
+        -webkit-text-fill-color: #222 !important;
+    }
 
-    <div class="banner-otaku">…</div>
+    input[type="search"]::placeholder,
+    .search-bar::placeholder {
+        color: #7d7d7d !important;
+        opacity: 1 !important;
+    }
+  </style>
+</head>
 
-    <!-- HEADER PRINCIPAL -->
-    <header class="site-header banner-bg">
-        <div class="brand">
-            <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
-        </div>
+<body>
 
-        <h1>Trouvez vos produits préférés 🇯🇵</h1>
-    </header>
+  <div class="banner-otaku">…</div>
 
-    <!-- NAVIGATION -->
-    <nav class="nav-manga">
-        <a href="/accueil">Accueil</a>
-        <a href="/figurines">Figurines</a>
-        <a href="/goodies">Goodies</a>
-        <a href="/manga">Manga</a>
-    </nav>
+  <!-- HEADER PRINCIPAL -->
+  <header class="site-header banner-bg">
+      <div class="brand">
+          <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
+      </div>
+      <h1>Trouvez vos produits préférés 🇯🇵</h1>
+  </header>
 
-    <!-- BARRE DE RECHERCHE -->
-    <div class="search-wrap">
-        <input type="search" class="search-bar" placeholder="Rechercher...">
-        <button id="searchBtn">🔎</button>
-    </div>
+  <!-- NAVIGATION -->
+  <nav class="nav-manga">
+      <a href="/accueil">Accueil</a>
+      <a href="/figurines">Figurines</a>
+      <a href="/goodies">Goodies</a>
+      <a href="/manga">Manga</a>
+  </nav>
 
-    <main>
+  <!-- BARRE DE RECHERCHE -->
+  <div class="search-wrap">
+      <input type="search" class="search-bar" placeholder="Rechercher...">
+      <button id="searchBtn">🔎</button>
+  </div>
 
-        <!-- SECTION HERO -->
-        <section class="hero">
-            <div class="hero-left">
-                <h2>Top figurines & bons plans anime</h2>
-                <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
+  <main>
 
-                <div class="cta-row">
-                    <a class="btn primary" href="#figures">Voir les figurines</a>
-                    <a class="btn" href="article.html">Guide collection</a>
-                </div>id="productsGrid">
-    <div class="product">Figurine Naruto</div>
-    <div class="product">Figurine Goku</div>
-</div>
+    <!-- SECTION HERO -->
+    <section class="hero">
+        <div class="hero-left">
+            <h2>Top figurines & bons plans anime</h2>
+            <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
 
-<div id="goodiesGrid">
-    <div class="goodie">Poster One Piece</div>
-    <div class="goodie">Porte-clés Dragon Ball</div>
-</div>
-
-<div id="mangaGrid">
-    <div class="manga">Guide collection Naruto</div>
-    <div class="manga">Top mangas 2025</div>
-            </div>
-
-            <div class="hero-right">
-                <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
-            </div>
-        </section>
-
-        <!-- FIGURINES -->
-        <section id="figures" class="catalog-section">
-            <h3>Figurines populaires</h3>
-            <div id="productsGrid" class="grid"></div>
-        </section>
-
-        <!-- GOODIES -->
-        <section id="goodies" class="catalog-section">
-            <h3>Goodies & Posters</h3>
-            <div id="goodiesGrid" class="grid"></div>
-        </section>
-
-        <!-- ARTICLES -->
-        <section class="manga-preview">
-            <h3>Derniers articles</h3>
-            <div id="articlesGrid" class="grid-articles"></div>
-            <a class="btn" href="article.html">Voir tous les articles</a>
-        </section>
-
-    </main>
-
-    <!-- MODAL PRODUIT -->
-    <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <button id="closeModal" class="close">✕</button>
-            <div id="modalInner"></div>
-        </div>
-    </div>
-
-    <!-- FOOTER -->
-    <footer>
-        <div class="footer-inner">
-            <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
-            <div class="footer-links">
-                <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
+            <div class="cta-row">
+                <a class="btn primary" href="#figures">Voir les figurines</a>
+                <a class="btn" href="article.html">Guide collection</a>
             </div>
         </div>
-    </footer>
 
-    <!-- JS -->
-    <script src="script.js"></script>
-    <script src="products.js"></script>
+        <div class="hero-right">
+            <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
+        </div>
+    </section>
 
-    <!-- Effet nav -->
-    <script>
-        document.querySelectorAll('.nav-link').forEach(link => {
-            link.addEventListener('click', e => {
-                const wave = document.createElement('span');
-                wave.classList.add('energy-wave');
+    <!-- FIGURINES -->
+    <section id="figures" class="catalog-section">
+        <h3>Figurines populaires</h3>
+        <div id="productsGrid" class="grid">
+            <div class="product">Figurine Naruto</div>
+            <div class="product">Figurine Goku</div>
+        </div>
+    </section>
 
-                const rect = link.getBoundingClientRect();
-                wave.style.left = (e.clientX - rect.left) + "px";
-                wave.style.top = (e.clientY - rect.top) + "px";
+    <!-- GOODIES -->
+    <section id="goodies" class="catalog-section">
+        <h3>Goodies & Posters</h3>
+        <div id="goodiesGrid" class="grid">
+            <div class="goodie">Poster One Piece</div>
+            <div class="goodie">Porte-clés Dragon Ball</div>
+        </div>
+    </section>
 
-                link.appendChild(wave);
-                setTimeout(() => wave.remove(), 450);
-            });
+    <!-- MANGAS -->
+    <section id="mangas" class="catalog-section">
+        <h3>Derniers mangas</h3>
+        <div id="mangaGrid" class="grid">
+            <div class="manga">Guide collection Naruto</div>
+            <div class="manga">Top mangas 2025</div>
+        </div>
+        <a class="btn" href="article.html">Voir tous les mangas</a>
+    </section>
+
+  </main>
+
+  <!-- MODAL PRODUIT -->
+  <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
+      <div class="modal-content">
+          <button id="closeModal" class="close">✕</button>
+          <div id="modalInner"></div>
+      </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+      <div class="footer-inner">
+          <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
+          <div class="footer-links">
+              <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
+          </div>
+      </div>
+  </footer>
+
+  <!-- JS -->
+  <script src="script.js"></script>
+  <script src="products.js"></script>
+
+  <!-- Barre de recherche dynamique -->
+  <script>
+    const searchInput = document.querySelector('.search-bar');
+    const searchBtn = document.getElementById('searchBtn');
+
+    const productsGrid = document.getElementById('productsGrid');
+    const goodiesGrid = document.getElementById('goodiesGrid');
+    const mangaGrid = document.getElementById('mangaGrid');
+
+    const productItems = Array.from(productsGrid.children);
+    const goodiesItems = Array.from(goodiesGrid.children);
+    const mangaItems = Array.from(mangaGrid.children);
+
+    function filterItems() {
+        const query = searchInput.value.toLowerCase().trim();
+
+        productItems.forEach(item => {
+            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
         });
-    </script>
 
-    <!-- Petit zoom sur hover -->
-    <script>
-        document.querySelectorAll('.nav-manga a').forEach(link => {
-            link.addEventListener('mouseenter', () => {
-                link.style.transform = 'scale(1.07)';
-                setTimeout(() => link.style.transform = 'scale(1)', 120);
-            });
+        goodiesItems.forEach(item => {
+            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
         });
-    </script>
-<script>
-// Récupération des éléments
-const searchInput = document.querySelector('.search-bar');
-const searchBtn = document.getElementById('searchBtn');
 
-// Quand on clique sur le bouton
-searchBtn.addEventListener('click', () => {
-    const query = searchInput.value.toLowerCase();
-    if (!query) return alert("Veuillez entrer un mot-clé.");
+        mangaItems.forEach(item => {
+            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
+        });
+    }
 
-    // Exemple : chercher dans les produits et articles (simulé)
-    const products = document.querySelectorAll('#productsGrid .product');
-    const goodies = document.querySelectorAll('#goodiesGrid .goodie');
-    const articles = document.querySelectorAll('#articlesGrid .article');
-
-    // Pour l'exemple, juste afficher une alerte
-    alert("Recherche : " + query + "\nNombre de produits trouvés : " + products.length);
-});
-
-// Optionnel : recherche en appuyant sur Enter
-searchInput.addEventListener('keypress', e => {
-    if (e.key === 'Enter') searchBtn.click();
-});
-</script>
-<script>
-// Récupération des éléments
-const searchInput = document.querySelector('.search-bar');
-const searchBtn = document.getElementById('searchBtn');
-
-// Sections et items
-const productsGrid = document.getElementById('productsGrid');
-const goodiesGrid = document.getElementById('goodiesGrid');
-const mangaGrid = document.getElementById('mangaGrid');
-
-const productItems = Array.from(productsGrid.children); 
-const goodiesItems = Array.from(goodiesGrid.children);   
-const mangaItems = Array.from(mangaGrid.children);       
-
-function filterItems() {
-    const query = searchInput.value.toLowerCase().trim();
-
-    // Filtrer produits
-    productItems.forEach(item => {
-        const text = item.textContent.toLowerCase();
-        item.style.display = text.includes(query) ? '' : 'none';
+    searchBtn.addEventListener('click', filterItems);
+    searchInput.addEventListener('keypress', e => {
+        if (e.key === 'Enter') filterItems();
     });
+  </script>
 
-    // Filtrer goodies
-    goodiesItems.forEach(item => {
-        const text = item.textContent.toLowerCase();
-        item.style.display = text.includes(query) ? '' : 'none';
-    });
-
-    // Filtrer mangas
-    mangaItems.forEach(item => {
-        const text = item.textContent.toLowerCase();
-        item.style.display = text.includes(query) ? '' : 'none';
-    });
-}
-
-// Recherche au clic
-searchBtn.addEventListener('click', filterItems);
-
-// Recherche en appuyant sur Enter
-searchInput.addEventListener('keypress', e => {
-    if (e.key === 'Enter') filterItems();
-});
-</script>
 </body>
 </html>
+
+
 
 
 
