--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="OtakuHub — Top figurines, posters et coffrets manga. Comparatifs, guides et bons plans affiliés.">
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Couleur du texte dans la barre de recherche -->
+  <!-- Couleur barre de recherche -->
   <style>
     input[type="search"],
     .search-bar {
@@ -27,7 +27,7 @@
 
   <div class="banner-otaku">…</div>
 
-  <!-- HEADER PRINCIPAL -->
+  <!-- HEADER -->
   <header class="site-header banner-bg">
       <div class="brand">
           <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
@@ -46,27 +46,9 @@
   <!-- BARRE DE RECHERCHE -->
   <div class="search-wrap">
       <input type="search" class="search-bar" placeholder="Rechercher...">
-      <button id="searchBtn">🔎</button>
   </div>
 
   <main>
-
-    <!-- SECTION HERO -->
-    <section class="hero">
-        <div class="hero-left">
-            <h2>Top figurines & bons plans anime</h2>
-            <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
-
-            <div class="cta-row">
-                <a class="btn primary" href="#figures">Voir les figurines</a>
-                <a class="btn" href="article.html">Guide collection</a>
-            </div>
-        </div>
-
-        <div class="hero-right">
-            <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
-        </div>
-    </section>
 
     <!-- FIGURINES -->
     <section id="figures" class="catalog-section">
@@ -74,6 +56,7 @@
         <div id="productsGrid" class="grid">
             <div class="product">Figurine Naruto</div>
             <div class="product">Figurine Goku</div>
+            <div class="product">Figurine Luffy</div>
         </div>
     </section>
 
@@ -83,6 +66,7 @@
         <div id="goodiesGrid" class="grid">
             <div class="goodie">Poster One Piece</div>
             <div class="goodie">Porte-clés Dragon Ball</div>
+            <div class="goodie">Mug Naruto</div>
         </div>
     </section>
 
@@ -92,19 +76,11 @@
         <div id="mangaGrid" class="grid">
             <div class="manga">Guide collection Naruto</div>
             <div class="manga">Top mangas 2025</div>
+            <div class="manga">One Piece Tome 100</div>
         </div>
-        <a class="btn" href="article.html">Voir tous les mangas</a>
     </section>
 
   </main>
-
-  <!-- MODAL PRODUIT -->
-  <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
-      <div class="modal-content">
-          <button id="closeModal" class="close">✕</button>
-          <div id="modalInner"></div>
-      </div>
-  </div>
 
   <!-- FOOTER -->
   <footer>
@@ -116,24 +92,15 @@
       </div>
   </footer>
 
-  <!-- JS -->
-  <script src="script.js"></script>
-  <script src="products.js"></script>
-
-  <!-- Barre de recherche dynamique -->
+  <!-- JS : Filtrage en temps réel -->
   <script>
     const searchInput = document.querySelector('.search-bar');
-    const searchBtn = document.getElementById('searchBtn');
 
-    const productsGrid = document.getElementById('productsGrid');
-    const goodiesGrid = document.getElementById('goodiesGrid');
-    const mangaGrid = document.getElementById('mangaGrid');
+    const productItems = Array.from(document.querySelectorAll('#productsGrid .product'));
+    const goodiesItems = Array.from(document.querySelectorAll('#goodiesGrid .goodie'));
+    const mangaItems = Array.from(document.querySelectorAll('#mangaGrid .manga'));
 
-    const productItems = Array.from(productsGrid.children);
-    const goodiesItems = Array.from(goodiesGrid.children);
-    const mangaItems = Array.from(mangaGrid.children);
-
-    function filterItems() {
+    function filterItemsRealtime() {
         const query = searchInput.value.toLowerCase().trim();
 
         productItems.forEach(item => {
@@ -149,26 +116,12 @@
         });
     }
 
-    searchBtn.addEventListener('click', filterItems);
-    searchInput.addEventListener('keypress', e => {
-        if (e.key === 'Enter') filterItems();
-    });
+    // Filtrage dès que l'utilisateur tape
+    searchInput.addEventListener('input', filterItemsRealtime);
   </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
