--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html><!doctype html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -8,153 +8,119 @@
   <link rel="stylesheet" href="styles.css">
 
   <style>
-    input[type="search"],
-    .search-bar {
-        color: #222 !important;
-        -webkit-text-fill-color: #222 !important;
-    }
+        input[type="search"],
+        .search-input,
+        #search {
+            color: #222 !important;
+            -webkit-text-fill-color: #222 !important;
+        }
 
-    input[type="search"]::placeholder,
-    .search-bar::placeholder {
-        color: #7d7d7d !important;
-        opacity: 1 !important;
-    }
+        input[type="search"]::placeholder,
+        .search-input::placeholder,
+        #search::placeholder {
+            color: #7d7d7d !important;
+            opacity: 1 !important;
+        }
   </style>
 </head>
 
 <body>
+    <div class="banner-otaku">…
+    </div>
 
-  <div class="banner-otaku">…</div>
+<header class="site-header banner-bg">
+    <div class="brand">
+      <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
+    </div>
 
-  <!-- HEADER -->
-  <header class="site-header banner-bg">
-      <div class="brand">
-          <img src="logo.svg" alt="Logo" class="logo" onerror="this.style.display='none'">
-      </div>
-      <h1>Trouvez vos produits préférés 🇯🇵</h1>
+    <h1>Trouvez vos produits préférés 🇯🇵</h1>
+</header>
+
+    <nav class="nav-manga">
+    <a href="/accueil">Accueil</a>
+    <a href="/figurines">Figurines</a>
+    <a href="/goodies">Goodies</a>
+    <a href="/manga">Manga</a>
+</nav>
+<div class="search-wrap">
+      <input type="search" class="search-bar" placeholder="Rechercher...">
+      <button id="searchBtn">🔎</button>
+    </div>
   </header>
 
-  <!-- NAVIGATION -->
-  <nav class="nav-manga">
-      <a href="/accueil">Accueil</a>
-      <a href="/figurines">Figurines</a>
-      <a href="/goodies">Goodies</a>
-      <a href="/manga">Manga</a>
-  </nav>
-
-  <!-- BARRE DE RECHERCHE -->
-  <div class="search-wrap">
-      <input type="search" class="search-bar" placeholder="Rechercher...">
-  </div>
-
   <main>
+    <section class="hero">
+      <div class="hero-left">
+        <h2>Top figurines & bons plans anime</h2>
+        <p>Comparatifs, guides d'achat et offres affiliées. Pas de stock — tu es redirigé vers des boutiques officielles.</p>
+        <div class="cta-row">
+          <a class="btn primary" href="#figures">Voir les figurines</a>
+          <a class="btn" href="article.html">Guide collection</a>
+        </div>
+      </div>
+      <div class="hero-right">
+        <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?q=80&w=800&auto=format&fit=crop" alt="anime" />
+      </div>
+    </section>
 
-    <!-- FIGURINES -->
     <section id="figures" class="catalog-section">
-        <h3>Figurines populaires</h3>
-        <div id="productsGrid" class="grid">
-            <!-- Produits existants dans le HTML -->
-            <div class="product">Figurine Naruto</div>
-            <div class="product">Figurine Goku</div>
-            <!-- Les nouveaux produits seront ajoutés ici dynamiquement -->
-        </div>
+      <h3>Figurines populaires</h3>
+      <div id="productsGrid" class="grid"></div>
     </section>
 
-    <!-- GOODIES -->
     <section id="goodies" class="catalog-section">
-        <h3>Goodies & Posters</h3>
-        <div id="goodiesGrid" class="grid">
-            <div class="goodie">Poster One Piece</div>
-            <div class="goodie">Porte-clés Dragon Ball</div>
-        </div>
+      <h3>Goodies & Posters</h3>
+      <div id="goodiesGrid" class="grid"></div>
     </section>
 
-    <!-- MANGAS -->
-    <section id="mangas" class="catalog-section">
-        <h3>Derniers mangas</h3>
-        <div id="mangaGrid" class="grid">
-            <div class="manga">Guide collection Naruto</div>
-            <div class="manga">Top mangas 2025</div>
-        </div>
+    <section class="manga-preview">
+      <h3>Derniers articles</h3>
+      <div id="articlesGrid" class="grid-articles"></div>
+      <a class="btn" href="article.html">Voir tous les articles</a>
     </section>
-
   </main>
 
-  <!-- FOOTER -->
+  <!-- Modal produit -->
+  <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+      <button id="closeModal" class="close">✕</button>
+      <div id="modalInner"></div>
+    </div>
+  </div>
+
   <footer>
-      <div class="footer-inner">
-          <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
-          <div class="footer-links">
-              <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
-          </div>
+    <div class="footer-inner">
+      <p>OtakuHub — Site de recommandation. Nous utilisons des liens d’affiliation. Ne vendons pas de produits directement.</p>
+      <div class="footer-links">
+        <a href="#">CGU</a> · <a href="#">Politique de confidentialité</a> · <a href="#">Contact</a>
       </div>
+    </div>
   </footer>
 
-  <!-- JS : Filtrage en temps réel et ajout de nouveaux produits -->
-  <script>
-    // Données des produits, goodies et mangas (dynamique et existants)
-    const newProducts = [
-      { name: "Figurine Luffy" },
-      { name: "Figurine Sasuke" },
-      { name: "Figurine Zoro" }
-    ];
+  <script src="script.js"></script>
+  <script src="products.js"></script>
+    <script>
+document.querySelectorAll('.nav-link').forEach(link => {
+    link.addEventListener('click', e => {
+        const wave = document.createElement('span');
+        wave.classList.add('energy-wave');
 
-    const newGoodies = [
-      { name: "Mug One Piece" },
-      { name: "T-shirt Dragon Ball" }
-    ];
+        const rect = link.getBoundingClientRect();
+        wave.style.left = (e.clientX - rect.left) + "px";
+        wave.style.top = (e.clientY - rect.top) + "px";
 
-    const newMangas = [
-      { name: "Manga Naruto Tome 100" },
-      { name: "Manga Attack on Titan Tome 30" }
-    ];
-
-    // Fonction pour ajouter les items dynamiquement
-    function renderItems(items, containerId, className) {
-      const container = document.getElementById(containerId);
-      items.forEach(item => {
-        const div = document.createElement("div");
-        div.className = className;
-        div.textContent = item.name;
-        container.appendChild(div);
-      });
-    }
-
-    // Ajoute les nouveaux produits, goodies et mangas
-    renderItems(newProducts, "productsGrid", "product");
-    renderItems(newGoodies, "goodiesGrid", "goodie");
-    renderItems(newMangas, "mangaGrid", "manga");
-
-    // Filtrage en temps réel
-    const searchInput = document.querySelector('.search-bar');
-
-    function filterItemsRealtime() {
-        const query = searchInput.value.toLowerCase().trim();
-
-        document.querySelectorAll('#productsGrid .product').forEach(item => {
-            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
-        });
-
-        document.querySelectorAll('#goodiesGrid .goodie').forEach(item => {
-            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
-        });
-
-        document.querySelectorAll('#mangaGrid .manga').forEach(item => {
-            item.style.display = item.textContent.toLowerCase().includes(query) ? '' : 'none';
-        });
-    }
-
-    // Filtrage dès que l'utilisateur tape dans la barre de recherche
-    searchInput.addEventListener('input', filterItemsRealtime);
-  </script>
-
+        link.appendChild(wave);
+        setTimeout(() => wave.remove(), 450);
+    });
+});
+</script>
+<script>
+document.querySelectorAll('.nav-manga a').forEach(link => {
+    link.addEventListener('mouseenter', () => {
+        link.style.transform = 'scale(1.07)';
+        setTimeout(() => link.style.transform = 'scale(1)', 120);
+    });
+});
+</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
